Fixed collapsed NPC spellbook footer displahy when no class is applied.

--- a/src/less/quadrone/actors.less
+++ b/src/less/quadrone/actors.less
@@ -492,7 +492,7 @@
 
   .spellbook-footer {
     align-content: end;
-    align-items: flex-start;
+    align-items: end;
     bottom: 0;
     min-height: 2.25rem;
     position: sticky;
@@ -518,11 +518,15 @@
     }
 
     .sheet-footer-right {
+      display: flex;
+      flex-direction: row;
       align-self: flex-end;
       padding-block-start: 0.375rem;
     }
 
     .sheet-footer-left:has(.compact)+.sheet-footer-right {
+      flex-direction: column;
+
       padding-block-start: 0.25rem;
     }
 
@@ -532,7 +536,7 @@
       border: 0.0625rem solid var(--t5e-component-field-border);
       background: var(--t5e-component-field-background);
       direction: ltr;
-      padding: var(--t5e-size-2x) var(--t5e-size-3x);
+      padding: var(--t5e-size-1x) var(--t5e-size-1x) var(--t5e-size-1x) var(--t5e-size-2x);
       width: 100%;
 
       .header {
