--- a/src/less/quadrone/npc.less
+++ b/src/less/quadrone/npc.less
@@ -203,6 +203,14 @@
   }
 
   .spellbook-footer {
+    .info {
+      > * {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        gap: var(--t5e-size-1x);
+      }
+    }
     .spellcasting-ability {
       select {
         height: 1.5rem;
